src/App.css
@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  color: #dad8d8;
  font-family: "Poppins", sans-serif;
  background: #1a1919;
}

.contact-icons a:hover {
  transform: scale(1.1);
  box-shadow: 1px 1px 3px #111922;
  border-radius: 10px;
}

.project-icons a:hover {
  transform: scale(1.1);
  box-shadow: 1px 1px 3px #111922;
  border-radius: 10px;
  border: none;
  outline: none;
}

span {
  background-color: transparent;
}

